fix(pricing): layout on mobile screens

--- a/_sass/web20/_pricing.scss
+++ b/_sass/web20/_pricing.scss
@@ -5,6 +5,8 @@
 .pricing_block {
   border: 4px solid lightgray;
   border-radius: 15px;
+  max-width: 400px;
+  margin: auto auto 20px;
 }
 
 .pricing_block__button--current {
